# VHF-Watch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  todo.txt
.github/workflows/: tests.yaml
tests/: test_analyzer.py  test_cli.py  test_logger.py  test_mayday_file.py  test_speech_detector.py  test_steamer.py
tests/data/: 38382-20230617-2339.txt
vhf_watch/: __main__.py  cli.py  config.py  logger_config.py
vhf_watch/analyzer/: llm_analyzer.py
vhf_watch/logger/: log_writer.py
vhf_watch/recorder/: obenwebrx.py  speech_detector.py  streamer.py  websocket_streamer.py
